Fix text overflow

--- a/src/app/vocabulary/random-word/random-word.component.less
+++ b/src/app/vocabulary/random-word/random-word.component.less
@@ -8,6 +8,12 @@
 .word-text {
   cursor: pointer;
   font-size: 28px;
+  word-break: break-word;
+}
+
+.word-hint {
+  word-break: break-word;
+  font-style: italic;
 }
 
 .google-links {
